--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "type": "module",
+  "homepage": "http://klrahul123.github.io/jalim",
   "engines": {
     "node": "14.x",
     "npm": "8.x"
@@ -18,11 +19,22 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "evergreen-ui": "^6.8.2",
     "express": "^4.17.1",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.15",
     "npm-git-install": "^0.3.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
+    "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -30,7 +42,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
